fixed a bug where music would not load in built jar. Changed from loading directory to loading each file separately